--- a/teatimer.html
+++ b/teatimer.html
@@ -9,7 +9,7 @@
 
 <div id="setTime">
   <label for="duration">Duration</label>
-  <input type="number" name="duration" />
+  <input type="number" id="duration" name="duration" />
 </div>
 <div id="timeLeft"></div>
 
