--- a/teatimer.html
+++ b/teatimer.html
@@ -2,14 +2,15 @@
 <html>
 <head>
 <title>Tea Timer</title>
-<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="../js/teatimer.js"></script>
+<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="js/teatimer.js"></script>
 </head>
 <body>
 
 <div id="setTime">
   <label for="duration">Duration</label>
-  <input type="number" id="duration" name="duration" />
+  <input type="number" id="duration" name="duration" value="3" min="1" max="12"/>
+  <button type="button" id="go">Go</button>
 </div>
 <div id="timeLeft"></div>
 
