--- a/teatimer.html
+++ b/teatimer.html
@@ -4,6 +4,7 @@
 <title>Tea Timer</title>
 <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="js/teatimer.js"></script>
+<link id="icon" rel="icon" href="img/teapot-small.png" />
 </head>
 <body>
 
