Timer saved to local storage.
I got tired of timers getting lost when I closed a tab, or let Chrome
restart to update.  Now timers survive refreshes, and there's a reset
in case you actually want to discard the timer.

--- a/teatimer.html
+++ b/teatimer.html
@@ -10,12 +10,12 @@
 
 <div id="setTime">
   <label for="duration">Duration (min)</label>
-  <!-- <input type="number" id="duration" name="duration" value="3" min="1" max="12"/> -->
-  <input type="range" id="duration" name="duration" value="3" min="2" max="12" step=".5"/>
+  <input type="range" id="duration" name="duration" value="3" min="1" max="12" step=".5"/>
   <span id="durationDisplay">3:00</span>
   <button type="button" id="go">Go</button>
 </div>
 <div id="timeLeft"></div>
+<button type="button" id="reset" style="display: none">Reset</button>
 
 </body>
 </html>
